# icloth-web-application

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
client/: CMakeLists.txt  application.cpp  client.cpp  client.h  constants.h  flag.h  loader.h  main.cpp  model.cpp  model.h  render_flag.cpp  render_flag.h  skybox.cpp  star.h  stb_image.cpp  texture.cpp  texture.h
client/camera/: camera.cpp  camera.h  orthographic_camera.cpp  orthographic_camera.h  perspective_camera.cpp  perspective_camera.h
client/core/: buffer_attribute.hpp  buffer_geometry.h  layers.cpp  layers.h  object3d.cpp  object3d.h  timer.cpp  timer.h
client/light/: ambient_light.h  area_light.h  directional_light.h  light.h  point_light.h  spot_light.h
client/material/: lambert_material.h  material.h
client/math/: rect.h  uuid.cpp  uuid.h
client/object/: group.h  mesh.h
client/renderer/: render_target.h  renderer.cpp  renderer.h
client/renderer/opengl/: Attributes.h  attribute_manager.h  binding_states.cpp  binding_states.h  buffer.h  buffer_renderer.h  capability.h  color_buffer.h  constant_interpret.h  depth_buffer.h  geometries.h  indexed_buffer_renderer.h  objects.h  program.cpp  program.h  properties.h  render_list.h  sampler.h  shader.cpp  shader.h  state.cpp  state.h  stencil_buffer.h  texture.h  texture_manager.h
client/scene/: scene.h
client/texture/: image.cpp  image.h  texture.h  texture2d.h  texture_cubemap.h
client/utility/: constants.h
cmake/: assimp.cmake  glfw.cmake  glm.cmake  grpc.cmake
proto/: geometry.proto  handle.proto  math.proto  simulation.proto
